@@ -107,6 +107,10 @@ public class HtmlParser extends Parser {
 		super.initProperties();
 		addProperty(ClassPropertyEnum.SIZE_LIMIT, "0", null);
 		addProperty(ClassPropertyEnum.DEFAULT_CHARSET, "UTF-8", null);
+		addProperty(ClassPropertyEnum.URL_FRAGMENT,
+				ClassPropertyEnum.KEEP_REMOVE_LIST[0],
+				ClassPropertyEnum.KEEP_REMOVE_LIST);
+
 		if (config != null)
 			urlItemFieldEnum = config.getUrlManager().getUrlItemFieldEnum();
 	}
@@ -329,6 +333,10 @@ public class HtmlParser extends Parser {
 
 		UrlFilterItem[] urlFilterList = getUrlFilterList();
 
+		boolean removeFragment = ClassPropertyEnum.KEEP_REMOVE_LIST[1]
+				.equalsIgnoreCase(getProperty(ClassPropertyEnum.URL_FRAGMENT)
+						.getValue());
+
 		List<HtmlNodeAbstract<?>> nodes = rootNode.getAllNodes("a", "frame");
 		IndexDocument srcDoc = getSourceDocument();
 		if (srcDoc != null && nodes != null && metaRobotsFollow) {
@@ -358,7 +366,7 @@ public class HtmlParser extends Parser {
 					if (!href.startsWith("javascript:"))
 						if (currentURL != null)
 							newUrl = LinkUtils.getLink(currentURL, href,
-									urlFilterList);
+									urlFilterList, removeFragment);
 				if (newUrl != null) {
 					ParserFieldEnum field = null;
 					if (newUrl.getHost().equalsIgnoreCase(currentURL.getHost())) {
